# rsomics-sc-pearson-residuals

./: Cargo.toml  PERF_NOTES.md  README.md
benches/: bench.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs
tests/golden/: goldens.json
