[package]
name = "rsomics-sc-pearson-residuals"
version = "0.1.1"
description = "Analytic Pearson residuals normalization of a single-cell count matrix — value-exact match of scanpy.experimental.pp.normalize_pearson_residuals"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-sc-pearson-residuals"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-sc-pearson-residuals"
path = "src/main.rs"

[lib]
name = "rsomics_sc_pearson_residuals"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
rayon = "1"
ryu = "1"
flate2 = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
